[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox_sdj"
version = "2023.03.01"
description = "Collection of python tools and helpers."

readme = "README.md"

requires-python = ">=3.8"

authors = [
    {email = "dejongh.st@gmail.com"},
    {name = "Steve De Jongh"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
]

[tool.setuptools.packages.find]
where = ["toolbox_sdj"]